<resources>
    <string name="app_name">ProzentRechnerErweitert</string>
    <string name="ihre_eingabe">Ihre Eingabe...</string>
    <string name="ergebnnis">Ergebnnis......</string>
    <string name="_10">10%</string>
    <string name="_20">20%</string>
    <string name="_30">30%</string>
    <string name="_40">40%</string>
    <string name="_50">50%</string>
    <string name="_60">60%</string>
    <string name="_70">70%</string>
    <string name="_80">80%</string>
    <string name="_90">90%</string>
    <string name="invalid_input">ungültige eingabe</string>
    <string name="result">Ergebins:</string>
    <string name="reset">Reset</string>
    <string name="no_value">bitte zuerst Wert eingeben</string>
</resources>
